--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Portifólio</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
@@ -24,6 +24,9 @@
       <h1>SERVICES</h1>
       <p>Lorem ipsum dolor sit amet consectetur, dolor sit amet consectetur.</p>
     </section>
+
+
+    
     <section class="service">
       <span class="circle-icon">
         <i class="fa fa-desktop" aria-hidden="true"></i>
